--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,9 @@
 }
 * {
   box-sizing: border-box;
+  font-family: 'Open Sans', sans-serif;
 }
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 .bc-dark {
   background-color: var(--dark);
 }
@@ -67,10 +69,10 @@ a.brand img {
 }
 .signin {
   padding: 0 1rem;
-  text-shadow:5px 5px 5px rgb(75, 75, 99) ;
+  text-shadow:0px 3px 3px rgb(135, 135, 148) ;
 }
 .signin:hover {
-  text-shadow: 3px 3px 3px rgb(75, 75, 99) ;
+  text-shadow: 0px 1px 1px rgb(135, 135, 148) ;
   position: relative;
   top: 1px;
   left: 1px;
@@ -155,6 +157,14 @@ ul.nav-list {
   top: 1px;
   left: 1px;
 }
+.form-control:focus {
+  color: #212529;
+  background-color: #ffffff70;
+  border-color: #86b7fe;
+  outline: none;
+  box-shadow: none !important;
+}
+
 .search-button {
   border: 0;
   background-color: var(--color10);
@@ -184,30 +194,101 @@ ul.nav-list {
 /*                                                  content */
 /*                                                  content */
 .content-container {
-  height: 200vh;
+  height: auto;
   background-color: var(--color60);
 
 }
 .content-body {
-  border: 1px solid black;
   height: 100%;
   width: 100%;
   max-width: 1024px;
 }
-@media (max-width: 320px) {
+.content-body-first {
+  width: 60%;
+  height: 100%;
+  border-radius: 20px;
+
+}
+
+.new-and-upcoming-top {
+  width: 100%;
+  background-color: var(--color10);
+  margin-bottom: 10px;
+  border-radius: 5px;
+}
+.new-and-upcoming {
+  width: clamp(320px, 100% - 40px , 700px);
+  height: 600px;
+  margin-bottom: 80px;
+}
+.new-and-upcoming-content {
+  background-color: var(--color30);
+  height: 100%;
+  border-radius: 5px;
+
+}
+.monthly-ranking-top {
+  width: 100%;
+  background-color: var(--color10);
+  margin-bottom: 10px;
+  border-radius: 5px;
+}
+.monthly-ranking {
+  width: clamp(320px, 100% - 40px , 700px);
+  height: 600px;
+  margin-bottom: 80px;
+}
+.monthly-ranking-content {
+  background-color: var(--color30);
+  height: 100%;
+  border-radius: 5px;
+}
+@media (max-width:991px){
   .content-body {
-    padding: 0;
+    flex-direction: column;
+    height: auto;
+    align-items: center;
+  }
+  .content-body-first {
+    width: clamp(320px , 90%, 100%);
+    height: auto;
+  
+  }
+  .content-body-second {
+    width: 100%;
+    height: auto;
+  
   }
 }
-/*                                          new and upcoming */
-/*                                          new and upcoming */
-/*                                          new and upcoming */
-.new-and-upcoming {
-  width: 320px;
-  background-color: brown;
-  height: 50vh;
+.content-body-second {
+  width: 40%;
+  height: 100%;
+  height: 1000px;
 }
-.popular {
+.voting-links-top {
+  width: 100%;
+  background-color: var(--color10);
+  margin-bottom: 10px;
+  border-radius: 5px;
+}
+.voting-links {
+  width: clamp(320px, 100% - 40px , 700px);
+  height: 100%;
+  margin-bottom: 80px;
+}
+.voting-links-content {
+  background-color: var(--color30);
+  height: 100%;
+  border-radius: 5px;
+}
+@media (max-width:991px) {
+  .content-body-second {
+    width: clamp(320px , 90%, 100%);
+    height: 1000px;
+  }
+}
+
+/* .popular {
   width: 320px;
   background-color: brown;
   height: 50vh;
@@ -216,7 +297,8 @@ ul.nav-list {
   width: 320px;
   background-color: brown;
   height: 50vh;
-}
-/*                                      new and upcoming end */
-/*                                      new and upcoming end */
-/*                                      new and upcoming end */
+} */
+
+/*                                               Content End */
+/*                                               Content End */
+/*                                               Content End */
