--- a/assets/style.css
+++ b/assets/style.css
@@ -8,6 +8,7 @@
 * {
   box-sizing: border-box;
   font-family: 'Open Sans', sans-serif;
+  border: 1px black solid
 }
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 .bc-dark {
@@ -26,7 +27,7 @@ nav {
   height: 50px;
   width: 100%;
 }
-nav , header, section, .content-container {
+nav , header, section, .content-container, .content-body {
   min-width: 320px;
 }
 .content-items1 {
@@ -47,9 +48,6 @@ header {
 a.brand{
   border-radius: 10px;
 }
-.header-top-body{
-  background-image: linear-gradient(var(--color30), rgba(255, 255, 255, 0));
-}
 .header-top {
   justify-content: space-between;
   max-width: 1024px;
@@ -69,10 +67,10 @@ a.brand img {
 }
 .signin {
   padding: 0 1rem;
-  text-shadow:0px 3px 3px rgb(135, 135, 148) ;
+  text-shadow:0px 2px 2px rgb(0, 0, 0) ;
 }
 .signin:hover {
-  text-shadow: 0px 1px 1px rgb(135, 135, 148) ;
+  text-shadow: 0px 1px 1px rgb(0, 0, 0) ;
   position: relative;
   top: 1px;
   left: 1px;
@@ -187,118 +185,38 @@ ul.nav-list {
 /*                                               navbar end */
 /*                                               navbar end */
 /*                                               navbar end */
-
-/*                                                  content */
-/*                                                  content */
-/*                                                  content */
-/*                                                  content */
-/*                                                  content */
-.content-container {
-  height: auto;
-  background-color: var(--color60);
-
-}
 .content-body {
-  height: 100%;
+  padding: 60px 0;
   width: 100%;
-  max-width: 1024px;
+  background-color: var(--color60);
 }
-.content-body-first {
+.content-container {
+  width: clamp(320px, 80%, 1024px);
+  height: 500px;
+}
+.content-container-first {
   width: 60%;
-  height: 100%;
-  border-radius: 20px;
-
 }
-
-.new-and-upcoming-top {
-  width: 100%;
-  background-color: var(--color10);
-  margin-bottom: 10px;
-  border-radius: 5px;
+.content-container-second {
+  width: 40%;
 }
-.new-and-upcoming {
-  width: clamp(320px, 100% - 40px , 700px);
-  height: 600px;
-  margin-bottom: 80px;
-}
-.new-and-upcoming-content {
-  background-color: var(--color30);
-  height: 100%;
-  border-radius: 5px;
-
-}
-.monthly-ranking-top {
-  width: 100%;
-  background-color: var(--color10);
-  margin-bottom: 10px;
-  border-radius: 5px;
-}
-.monthly-ranking {
-  width: clamp(320px, 100% - 40px , 700px);
-  height: 600px;
-  margin-bottom: 80px;
-}
-.monthly-ranking-content {
-  background-color: var(--color30);
-  height: 100%;
-  border-radius: 5px;
-}
-@media (max-width:991px){
-  .content-body {
+@media (max-width: 992px) {
+  .content-container {
     flex-direction: column;
-    height: auto;
     align-items: center;
   }
-  .content-body-first {
-    width: clamp(320px , 90%, 100%);
-    height: auto;
-  
+  .content-container-first {
+    width: clamp(320px, 80%, 992px);
+    height: 700px;
   }
-  .content-body-second {
-    width: 100%;
-    height: auto;
-  
-  }
-}
-.content-body-second {
-  width: 40%;
-  height: 100%;
-  height: 1000px;
-}
-.voting-links-top {
-  width: 100%;
-  background-color: var(--color10);
-  margin-bottom: 10px;
-  border-radius: 5px;
-}
-.voting-links {
-  width: clamp(320px, 100% - 40px , 700px);
-  height: 100%;
-  margin-bottom: 80px;
-}
-.voting-links-content {
-  background-color: var(--color30);
-  height: 100%;
-  border-radius: 5px;
-}
-@media (max-width:991px) {
-  .content-body-second {
-    width: clamp(320px , 90%, 100%);
-    height: 1000px;
+  .content-container-second {
+    width: 40%;
+    width: clamp(320px, 80%, 992px);
+    height: 700px;
   }
 }
-
-/* .popular {
-  width: 320px;
-  background-color: brown;
-  height: 50vh;
-}
-.polls {
-  width: 320px;
-  background-color: brown;
-  height: 50vh;
-} */
-
-/*                                               Content End */
-/*                                               Content End */
-/*                                               Content End */
+/*                                                  content */
+/*                                                  content */
+/*                                                  content */
+/*                                                  content */
+/*                                                  content */
