--- a/assets/votingstyle.css
+++ b/assets/votingstyle.css
@@ -196,215 +196,21 @@ ul.nav-list {
 /*                                               navbar end */
 /*                                               navbar end */
 /*                                               navbar end */
-
-/*                                                  content */
-/*                                                  content */
-/*                                                  content */
-/*                                                  content */
-/*                                                  content */
 .content-container-body {
-  padding: 3rem 0;
-  width: clamp(320px, 100%, 100%);
+  height: 100vh;
+  width: 100%;
+  justify-content: center;
   background-color: var(--color60);
-
 }
 .content-container {
-  width: clamp(320px,992px,992px);
-  justify-content: center;
-  align-items: start;
-}
-.content-container-first {
   height: 90%;
-  width: clamp(320px,60%,60%);
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
-  overflow: hidden;
-  margin-right: 1rem;
-  margin-bottom: 2rem;
+  width: clamp(320px, 992px,992px);
+  background-image: linear-gradient(var(--color60),#3333332a,var(--color60));
 }
-.content-container-first-top {
-  padding: 1rem;
-  height: 400px;
-  background-image: url(img/elden-ring-limgrave-vista.jpg);
-  background-size: cover;
-  margin-bottom: 1rem;
-}
-a.game-name {
-  text-decoration: none;
-}
-.game-title {
-  font-size: 40px;
-  font-family: 'Merriweather', serif;
-}
-.game-developer {
-  opacity: 50%;
-}
-.ratings {
-  font-size: 60px;
-  color: rgb(85, 224, 85);
-}
-.ratings-score {
-  background-color: rgba(255, 255, 255, 0.199);
-  padding: 0 10px;
-  border: 2px rgb(85, 224, 85) solid;
-  border-radius: 10px;
-}
-.content-container-first-bottom {
-  background-color: var(--color30);
-  width: 100%;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
-  overflow: hidden;
-  padding: 1rem;
-}
-.reviews-subheader {
-  font-size: 30px;
-}
-.stars1 {
-  color: rgb(85, 224, 85);
-}
-.stars2 {
-  color: var(--light)
-}
-textarea {
-  color: var(--light);
-  padding: 1rem;
-  border: 0;
-  background-color: #21252933;
-}
-textarea:focus {
-  outline: none;
-}
-textarea::placeholder {
-  color: var(--light);
-  opacity: 0.5;
-}
-.review-actions button {
-  border: 0;
-  background-color: #07004D;
-  color: var(--light);
-  border-bottom-right-radius: 10px;
-  border-bottom-left-radius: 10px;
-  width: 4rem;
-}
-.review-as a {
-  font-size: 15px;
-  color: var(--light);
-}
-.review-as1 {
-  font-size: 15px;
-}
-.users img {
-  width: 40px;
-  border-radius: 50%;
-
-}
-.users-name {
-  margin-left: 1rem;
-  font-size: 15px;
-}
-.users-comment-time {
-  margin-right: 1rem;
-  font-size: 15px;
-  opacity: 0.5;
-}
-.users-comment {
-  margin-left: 1rem;
-}
-.users-reviews1-actions{
-  margin-left: 1rem;
-  margin-bottom: 1rem;
-}
-.users-reviews1-actions button {
-  border: 0;
-  margin-right: 10px;
-  background-color: #21252933;
-  color: var(--light);
-  font-size: 15px;
-  border-radius: 10px;
-}
-.users-reviews1-stars {
-  margin-left: 1rem;
-  text-align: start;
-  width: 100%;
-}
-.content-container-second {
-  height: 100%;
-  width: clamp(320px,40%,40%);
-
-}
-.content-container-second a:hover {
-  color: var(--light);
-  position: relative;
-  top: 1px;
-}
-.subheader {
-  width: 100%;
-  text-align: center;
-  background-color: var(--color10);
-  color: var(--light);
-  font-family: 'Merriweather', serif;
-  margin-bottom: 1rem;
-  font-size: 2rem;
-}
-.shadowed {
-  box-shadow: 
-    3px 3px 3px #333333ad;
-}
-.content2 {
-  width: 100%;
-  height: 200px;
-  background-color: #21252933;
-  align-items: center;
-  justify-content: flex-start;
-  padding-left: 1rem;
-}
-
-.content3 {
+.voting {
   
-  width: 100%;
-  height: 200px;
-  align-items: center;
-  justify-content: start;
-  padding-left: 1rem;
-}
-.voting-links {
-  width: clamp(320px, 80%, 992px);
-  background-color: var(--color30);
-  border-radius: 5px;
-  overflow: hidden;
-  margin-bottom: 3rem;
-}
-.voting-links span.material-symbols-outlined {
-  font-size: 4rem;
-}
-.voting-links a {
-  text-decoration: none;
-  color: var(--light);
-}
-@media (max-width: 992px) {
-  .content-container {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  .content-container-first {
-    width: clamp(320px,80%,80%);
-    margin-right: 0;
-  }
-  .content-container-second {
-    width: clamp(320px,80%,80%);
-  }
-  .voting-links {
-    width: clamp(320px,auto,100%);
-  }
 }
 
-/*                                               content end */
-/*                                               content end */
-/*                                               content end */
-/*                                               content end */
-/*                                               content end */
 
 /*                                                      footer */
 /*                                                      footer */
