--- a/assets/gamestyle.css
+++ b/assets/gamestyle.css
@@ -16,6 +16,9 @@
 .bc-light {
   background-color: var(--light);
 }
+.bc-60 {
+  background-color: var(--color60);
+}
 .t-dark {
   color: var(--dark);
 }
@@ -29,7 +32,6 @@
   color: var(--color30);
 }
 nav {
-  height: 50px;
   width: 100%;
 }
 nav , header.d-flex, section, .content-container, .content-container-body {
@@ -122,7 +124,8 @@ a.brand img {
 /*                                                  navbar */
 /*                                                  navbar */
 .navbar-body {
-  background-image: linear-gradient(rgba(255, 255, 255, 0) , var(--color60));
+  width: clamp(320px,100%,100%);
+  background-color: var(--color60);
   height: 4rem;
   position: sticky;
   top: 0;
