--- a/assets/style.css
+++ b/assets/style.css
@@ -19,6 +19,9 @@
 .bc-transparent {
   background-color: transparent;
 }
+.bc-60 {
+  background-color: var(--color60);
+}
 .t-dark {
   color: var(--dark);
 }
@@ -32,7 +35,6 @@
   color: var(--color30);
 }
 nav {
-  height: 50px;
   width: 100%;
 }
 nav , header.d-flex, section, .content-container, .content-container-body {
@@ -125,7 +127,8 @@ a.brand img {
 /*                                                  navbar */
 /*                                                  navbar */
 .navbar-body {
-  background-image: linear-gradient(rgba(255, 255, 255, 0) , var(--color60));
+  width: clamp(320px,100%,100%);
+  background-color: var(--color60);
   height: 4rem;
   position: sticky;
   top: 0;
