--- a/assets/votingstyle.css
+++ b/assets/votingstyle.css
@@ -29,7 +29,6 @@
   color: var(--color30);
 }
 nav {
-  height: 50px;
   width: 100%;
 }
 nav , header.d-flex, section, .content-container, .content-container-body {
@@ -53,6 +52,7 @@ header {
   height: 50vh;
   background-image: url(img/Halo\ Blue.jpg);
   background-size: cover;
+  position: relative;
 }
 a.brand{
   border-radius: 10px;
@@ -61,6 +61,8 @@ a.brand{
   justify-content: space-between;
   max-width: 991px;
   padding-right: 30px;
+  position: sticky;
+  top: 0;
 
 }
 .header-top a:hover {
@@ -122,7 +124,8 @@ a.brand img {
 /*                                                  navbar */
 /*                                                  navbar */
 .navbar-body {
-  background-image: linear-gradient(rgba(255, 255, 255, 0) , var(--color60));
+  width: clamp(320px,100%,100%);
+  background-color: var(--color60);
   height: 4rem;
   position: sticky;
   top: 0;
