--- a/assets/sign-up-style.css
+++ b/assets/sign-up-style.css
@@ -16,6 +16,12 @@
 .bc-light {
   background-color: var(--light);
 }
+.bc-transparent {
+  background-color: transparent;
+}
+.bc-60 {
+  background-color: var(--color60);
+}
 .t-dark {
   color: var(--dark);
 }
@@ -31,25 +37,10 @@
 nav {
   width: 100%;
 }
-nav , header.d-flex, .content-container-body, .content-container  {
+nav , header.d-flex, section, .content-container, .content-container-body {
   min-width: 320px;
 }
-.shadowed {
-  box-shadow: 0 0 3px #333333ad;
-}
-.text-shadowed-dark {
-  text-shadow: 0px 0px 8px black;
-}
-.back-to-top {
-  position: fixed;
-  bottom: 1rem;
-  left: 50%;
-  background-color: var(--color10);
-  border: 0;
-  border-radius: 5px;
-  width: 3rem;
-  padding: 10px;
-}
+
 /*                                              Header */
 /*                                              Header */
 /*                                              Header */
@@ -61,7 +52,6 @@ header {
   height: 50vh;
   background-image: url(img/Halo\ Blue.jpg);
   background-size: cover;
-  position: relative;
 }
 a.brand{
   border-radius: 10px;
@@ -70,8 +60,6 @@ a.brand{
   justify-content: space-between;
   max-width: 991px;
   padding-right: 30px;
-  position: sticky;
-  top: 0;
 
 }
 .header-top a:hover {
@@ -101,28 +89,19 @@ a.brand img {
   box-shadow: 5px 5px 5px rgb(16, 16, 41) ;
 
 }
-.modal-body {
-  flex-direction: column;
-}
-.modal-body a{
-  text-decoration: none;
-}
-.modal-body a:hover {
-  color: var(--color30);
-  text-decoration: underline;
-
-}
-.modal-footer button{
- border: 0;
- border-radius: 5px;
-}
 .signup:hover {
   box-shadow: 3px 3px 3px rgb(16, 16, 41) ;
   position: relative;
   top: 1px;
   left: 1px;
 }
-
+.shadowed {
+  box-shadow: 
+    3px 3px 3px #333333ad;
+}
+.text-shadowed-dark {
+  text-shadow: 0px 0px 8px black;
+}
 @media (max-width: 991px) {
   .sign,.signup, .signin{
     display: none;
@@ -152,7 +131,7 @@ a.brand img {
   background-color: var(--color60);
   height: 4rem;
   position: sticky;
-  top: 0;
+  top: -1;
 
 }
 nav {
@@ -223,149 +202,36 @@ ul.nav-list {
 /*                                               navbar end */
 /*                                               navbar end */
 /*                                               navbar end */
+
 .content-container-body {
-  width: clamp(320px , 100% , 100%);
-  justify-content: center;
-  width: 100%;
+  width: clamp(320px, 100%, 100%);
   background-color: var(--color60);
+  height: 75vh;
+  justify-content: center;
 }
 .content-container {
   padding: 3rem 0;
-  width: clamp(320px , 992px, 992px);
-  justify-content: center;  
+  width: clamp(320px, 992px, 992px);
   background-image: linear-gradient(var(--color60),#3333332a,var(--color60));
-}
-.voting {
-  width: clamp(320px, 90%,90%);
-  flex-direction: column;
-}
-.voting-sub-header {
-  padding: 10px ;
-  font-size: 30px;
-  text-align: center;
-  background-color: var(--color10);
-  width: 100%;
-  border-top-right-radius: 10px;
-  border-top-left-radius: 10px;
-}
-.voting-search-bar {
-  background-color: var(--color30);
   justify-content: center;
-  padding: 10px;
-  width: 100%;
 }
-.voting-search-bar input {
-  margin-right: 10px;
-  border: 0;
-  border-radius: 5px;
-}
-.voting-search-bar input:focus {
-  outline: 0;
-}
-.voting-search-bar button {
-  border: 0;
-  border-radius: 5px;
-  background-color: var(--color10);
-}
-.voting-content {
-  padding: 0 10px 0 10px;
-  background-color: var(--color30);
-
-}
-.content {
-  align-items: center;
-  padding-left: 10px;
-  margin-bottom: 10px;
-  height: 200px;
-  width: 100%;
-  background-color: red;
-}
-.content button {
-  border: 0;
-  background-color: transparent;
-}
-.content button:hover {
-  position: relative;
-  top: 2px;
-}
-.voting-content-first {
-  width: 50%;
-  margin-right: 10px;
-}
-.voting-content-second {
-  width: 50%;
-}
-.title-dev {
-  align-items: center;
-  margin: 0 auto;
+.sign-up-form {
+  
   flex-direction: column;
 }
-.title {
+.form-header1 {
   text-align: center;
+  margin-bottom: 1rem;
   font-size: 30px;
 }
-i.fa-solid.fa-circle-arrow-up {
-  
-  font-size: 2rem;
-  color: var(--light);
+.form-footer1 {
+  justify-content: center;
 }
-.i.fa-solid.fa-circle-arrow-up:hover {
-  position: relative;
-  top: 1px;
+.form-footer1 button {
+  border: 0;
+  background-color: var(--color10);
+  border-radius: 5px;
 }
-.voting-content1 {
-  background-image: linear-gradient(to right,#333333c7,transparent,transparent) , url(img/elden-ring-limgrave-vista.jpg);
-  background-size: cover;
-}
-.voting-content2{
-  background-image: linear-gradient(to right,#333333c5,transparent,transparent) , url(img/GOW\ ragnarok.webp);
-  background-size: cover;
-}
-.voting-content3{
-  background-image: linear-gradient(to right,#333333c5,transparent,transparent) , url(img/zelda-tears-of-the-kingdom-button-2k-1663127818777.jpg);
-  background-size: cover;
-}
-.voting-content4 {
-  background-image: linear-gradient(to right,#333333c5,transparent,transparent) , url(img/FFXVI.webp);
-  background-size: cover;
-}
-.voting-content5 {
-  background-image: linear-gradient(to right,#333333c5,transparent,transparent) , url(img/Diablo-4-6.jpg);
-  background-size: cover;
-}
-.voting-content6 {
-  background-image: linear-gradient(to right,#333333c5,transparent,transparent) , url(img/starfield.jpg);
-  background-size: cover;
-}
-.voting-content7 {
-  background-image: linear-gradient(to right,#333333c5,transparent,transparent) , url(img/hogwarts\ legacy.jpg);
-  background-size: cover;
-}
-.voting-content8 {
-  background-image: linear-gradient(to right,#333333c5,transparent,transparent) , url(img/vampire\ survivors.webp);
-  background-size: cover;
-}
-.voting-content9 {
-  background-image: linear-gradient(to right,#333333c5,transparent,transparent) , url(img/marvel\ snap.webp);
-  background-size: cover;
-}
-.voting-content10 {
-  background-image: linear-gradient(to right,#333333c5,transparent,transparent) , url(img/citizen\ sleeper.webp);
-  background-size: cover;
-}
-@media (width <= 992px) {
-  .voting-content {
-    flex-direction: column;
-  }
-  .voting-content-first {
-    margin-right: 0;
-    width: 100%;
-  }
-  .voting-content-second {
-    width: 100%;
-  }
-}
-
 
 /*                                                      footer */
 /*                                                      footer */
